Update account paths
